# parallel-acc

./: CMakeLists.txt  example_openacc_1.cpp  example_openacc_2.cpp  final_1.cpp  final_2.cpp  final_3-ciftcozum.cpp  final_3.cpp  final_triangular_matrix.cpp
